Avoid wrapping in table head

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -153,6 +153,7 @@ tbody > tr:nth-child(even) {
 }
 thead {
     border-bottom: .05rem solid #000000;
+    white-space: nowrap;
 }
 tbody > tr:nth-child(odd) {
     background-color: #efefef;
